--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,6 @@
 ---
 const campaign_name = "Discover what's new in Futurehome";
-const current_image = "/campaign_image.jpg";
+const current_image = "/campaign_line.png";
 const campaign_link = "https://www.futurehome.io";
 const facebook_link = "https://facebook.com/futurehome.no/";
 const linkedin_link = "https://www.linkedin.com/company/future-home/";
@@ -143,7 +143,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
         </tr>
         <tr>
             <td align="left" style="font-size: 8px;">
-                <span>© Copyright 2023</span>
+                <span>© Copyright 2023 Futurehome AS</span>
                 <span style="float: right;"
                     ><a href={terms_link}>Terms &amp; Conditions</a></span
                 >
