--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,6 @@
 ---
 const campaign_name = "Discover what's new in Futurehome";
-const current_image = "/campaign_line.png";
+const current_image = "/campaign_image.jpg";
 const campaign_link = "https://www.futurehome.io";
 const facebook_link = "https://facebook.com/futurehome.no/";
 const linkedin_link = "https://www.linkedin.com/company/future-home/";
@@ -136,7 +136,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
             <td height="13px"></td>
         </tr>
         <tr>
-            <td style="border-top: 1px solid black;"></td>
+            <td style="border-top: 2px solid black;"></td>
         </tr>
         <tr>
             <td height="13px"></td>
