Final image for approve 	modified:   public/campaign_image.jpg 	modified:   src/components/footer.astro

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 ---
 const campaign_name = "Discover what's new in Futurehome";
 const current_image = "/campaign_image.jpg";
-const campaign_link = "https://www.futurehome.io";
+const campaign_link = "https://www.futurehome.io/en/smart-energy";
 const facebook_link = "https://facebook.com/futurehome.no/";
 const linkedin_link = "https://www.linkedin.com/company/future-home/";
 const youtube_link = "https://www.instagram.com/futurehome.no/";
@@ -46,7 +46,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
         }
     </style>
     <table
-        max-width="564"
+        max-width="564px"
         cellpadding="0"
         cellspacing="0"
         border="0"
@@ -67,7 +67,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
                         src={current_image}
                         alt={campaign_name}
                         style="border-radius: 10px;"
-                        width="564"
+                        width="100%"
                     />
                 </a>
             </td>
