--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 ---
 const campaign_name = "Discover what's new in Futurehome";
 const current_image = "/campaign_image.jpg";
-const campaign_link = "https://www.futurehome.io/en/smart-energy";
+const campaign_link = "http://currentcampaign.futurehome.no/";
 const facebook_link = "https://facebook.com/futurehome.no/";
 const linkedin_link = "https://www.linkedin.com/company/future-home/";
 const youtube_link = "https://www.instagram.com/futurehome.no/";
@@ -50,11 +50,11 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
         cellpadding="0"
         cellspacing="0"
         border="0"
-        style="font-family: 'Work Sans', Arial, sans-serif; font-weight: 400; color: #000;padding:20px;"
+        style="font-family: 'Work Sans', Arial, sans-serif; font-weight: 400; color: #000;padding:20px;background-color: #fff;"
     >
         <tr>
             <td align="left">
-                <img src="/Futurehome_logo.jpg" alt="Logo" width="100" />
+                <img src="/Futurehome_logo.png" alt="Logo" width="100" />
             </td>
         </tr>
         <tr>
@@ -105,30 +105,30 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
             <td align="right">
                 <a href={facebook_link}
                     ><img
-                        src="/facebook.jpg"
+                        src="/facebook.png"
                         alt="Facebook"
                         width="21"
-                        style="margin-right: 30px;"
+                        style="margin-right: 6%;"
                     /></a
                 >
                 <a href={linkedin_link}>
                     <img
-                        src="/linkedin.jpg"
+                        src="/linkedin.png"
                         alt="LinkedIn"
                         width="21"
-                        style="margin-right: 30px;"
+                        style="margin-right: 6%;"
                     /></a
                 >
                 <a href={instagram_link}
                     ><img
-                        src="/instagram.jpg"
+                        src="/instagram.png"
                         alt="Instagram"
                         width="21"
-                        style="margin-right: 30px;"
+                        style="margin-right: 6%;"
                     /></a
                 >
                 <a href={youtube_link}
-                    ><img src="/youtube.jpg" alt="Youtube" width="21" /></a
+                    ><img src="/youtube.png" alt="Youtube" width="21" /></a
                 >
             </td>
         </tr>
