Fix YT and IG links  Changes to be committed: 	modified:   src/components/footer.astro

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,8 +4,8 @@ const current_image = "/campaign_image.jpg";
 const campaign_link = "http://currentcampaign.futurehome.no/";
 const facebook_link = "https://facebook.com/futurehome.no/";
 const linkedin_link = "https://www.linkedin.com/company/future-home/";
-const youtube_link = "https://www.instagram.com/futurehome.no/";
-const instagram_link = "https://www.youtube.com/@FuturehomeNo";
+const youtube_link = "https://www.youtube.com/@FuturehomeNo";
+const instagram_link = "https://www.instagram.com/futurehome.no/";
 const privacy_link = "https://www.futurehome.io/no/personvernerklaering";
 const terms_link = "https://www.futurehome.io/no/tos-norwegian";
 ---
