--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -50,7 +50,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
         cellpadding="0"
         cellspacing="0"
         border="0"
-        style="font-family: 'Work Sans', Arial, sans-serif; font-weight: 400; color: #000;padding:20px;background-color: #fff;"
+        style="font-family: 'Work Sans', Arial, sans-serif; font-weight: 400; color: #000;padding:20px;background-color:#fff;background-color:#fff;border-radius:12px;"
     >
         <tr>
             <td align="left">
