Change images (white backgounds)

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -54,11 +54,11 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
     >
         <tr>
             <td align="left">
-                <img src="/Futurehome_logo.png" alt="Logo" width="100" />
+                <img src="/Futurehome_logo.png" alt="Logo" width="126" />
             </td>
         </tr>
         <tr>
-            <td height="27"></td>
+            <td height="10"></td>
         </tr>
         <tr>
             <td align="left">
@@ -76,7 +76,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
             <td height="16"></td>
         </tr>
         <tr>
-            <td align="left" style="font-size: 12px;">
+            <td align="left" style="font-size: 12px;padding-left:15px;">
                 <ul
                     class="text-links"
                     style="list-style: none; padding: 0; margin: 0;"
@@ -99,7 +99,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
             </td>
         </tr>
         <tr>
-            <td height="22"></td>
+            <td height="17"></td>
         </tr>
         <tr>
             <td align="right">
@@ -107,33 +107,33 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
                     ><img
                         src="/facebook.png"
                         alt="Facebook"
-                        width="21"
-                        style="margin-right: 6%;"
+                        width="30"
+                        style="margin-right: 3.8%;"
                     /></a
                 >
                 <a href={linkedin_link}>
                     <img
                         src="/linkedin.png"
                         alt="LinkedIn"
-                        width="21"
-                        style="margin-right: 6%;"
+                        width="30"
+                        style="margin-right: 3.8%;"
                     /></a
                 >
                 <a href={instagram_link}
                     ><img
                         src="/instagram.png"
                         alt="Instagram"
-                        width="21"
-                        style="margin-right: 6%;"
+                        width="30"
+                        style="margin-right: 3.8%;"
                     /></a
                 >
                 <a href={youtube_link}
-                    ><img src="/youtube.png" alt="Youtube" width="21" /></a
+                    ><img src="/youtube.png" alt="Youtube" width="30" /></a
                 >
             </td>
         </tr>
         <tr>
-            <td height="13px"></td>
+            <td height="8px"></td>
         </tr>
         <tr>
             <td style="border-top: 2px solid black;"></td>
