--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -10,7 +10,7 @@ const privacy_link = "https://www.futurehome.io/no/personvernerklaering";
 const terms_link = "https://www.futurehome.io/no/tos-norwegian";
 ---
 
-<div id="copy" style="background-color:#fff;border-radius:12px">
+<div id="copy">
     <style is:inline>
         a {
             color: #000;
@@ -50,7 +50,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
         cellpadding="0"
         cellspacing="0"
         border="0"
-        style="font-family: 'Work Sans', Arial, sans-serif; font-weight: 400; color: #000;padding:20px;background-color:#fff;border-radius:12px;"
+        style="font-family: 'Work Sans', Arial, sans-serif; font-weight: 400; color: #000;padding:20px;"
     >
         <tr>
             <td align="left">
