--- a/src/components/footer_inline.astro
+++ b/src/components/footer_inline.astro
@@ -19,21 +19,16 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
     >
         <tr>
             <td style="text-align: left;">
-                <img
-                    src="/Futurehome_logo.png"
-                    alt="Logo"
-                    width="152"
-                    href="https://www.futurehome.io"
-                />
-            </td>
-        </tr>
+                <a href="https://www.futurehome.io">
+                    <img src="/Futurehome_logo.png" alt="Logo" width="152" /></a
+                ></td
+            ></tr
+        >
+
         <tr style="height:10px;"></tr>
         <tr>
             <td style="text-align: left;">
-                <a
-                    href={campaign_link}
-                    style="color: #000; text-decoration: none;"
-                >
+                <a href={campaign_link}>
                     <img
                         src={current_image}
                         alt={campaign_name}
