Remove margins for inline/Zendesk

--- a/src/components/footer_inline.astro
+++ b/src/components/footer_inline.astro
@@ -39,8 +39,8 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
         </tr>
         <tr style="height:16px;"></tr>
         <tr>
-            <td style="text-align: left; font-size: 14px;padding-left:15px;">
-                <ul style="list-style: none; padding: 0; margin: 0;">
+            <td style="text-align: left; font-size: 14px;">
+                <ul style="list-style: none; padding: 0;">
                     <li style="display: inline;">
                         <a
                             href="https://www.stromkontroll.no"
@@ -48,11 +48,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
                             >stromkontroll.no</a
                         >
                     </li>
-                    <li
-                        style="margin-left:4px;margin-right:4px;display: inline;"
-                    >
-                        |
-                    </li>
+                    <li style="display: inline;">|</li>
 
                     <li style="display: inline;">
                         <a
@@ -61,11 +57,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
                             >support</a
                         >
                     </li>
-                    <li
-                        style="margin-left:4px;margin-right:4px;display: inline;"
-                    >
-                        |
-                    </li>
+                    <li style="display: inline;">|</li>
 
                     <li style="display: inline;">
                         <a
