February update  Changes to be committed: 	new file:   public/archive/campaign_image_till_02_2024.jpg 	modified:   public/campaign_image.jpg 	modified:   src/components/footer.astro

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -67,7 +67,7 @@ const terms_link = "https://www.futurehome.io/no/tos-norwegian";
                         src={current_image}
                         alt={campaign_name}
                         style="border-radius: 10px;"
-                        width="100%"
+                        width="564px"
                     />
                 </a>
             </td>
